# book-llm-wiki

./: .env.example  .gitignore  README.md  books.yaml.example  pyproject.toml
.claude/agents/: book-downloader.md
.claude/commands/: ingest-book.md  summarize-book.md
book_llm_wiki/: __main__.py  cli.py  ingest.py  metadata.py  vault.py
book_llm_wiki/convert/: __init__.py  epub.py  kindle.py  markdown.py
book_llm_wiki/downloader/: __init__.py  epub_quality.py  librarything.py
book_summarizer/: __main__.py  cli.py  config.py  ingest.py  metadata.py  vault.py
book_summarizer/convert/: __init__.py  epub.py  pdf.py
book_summarizer/downloader/: __init__.py  epub_quality.py  librarything.py
commands/: download-book.md  ingest-book.md  summarize-book.md
docs/: analysis-template.md  lens-examples.md
docs/superpowers/plans/: 2026-04-22-book-summarizer.md
docs/superpowers/specs/: 2026-04-22-book-summarizer-design.md
tests/: conftest.py  test_cli.py  test_cli_ingest.py  test_config.py  test_convert_dispatch.py  test_convert_epub.py  test_convert_epub_pdf_origin.py  test_convert_kindle.py  test_convert_markdown.py  test_convert_pdf.py  test_environment.py  test_epub_quality.py  test_ingest.py  test_metadata.py  test_smoke_real_books.py  test_vault.py
